--- a/newReact/src/App.css
+++ b/newReact/src/App.css
@@ -3,7 +3,7 @@ nav {
 }
 
 .container {
-  width: 380px;
+  width: 100%;
   align-items: center;
   padding: 0 15px;
 }
@@ -24,7 +24,8 @@ nav {
   align-items: center;
 }
 
-.img-container img {
+.img-container svg,
+.img-container png {
   width: 35px;
   height: 35px;
   margin-left: 10px;
